Fix login screen alignment

--- a/iplfe/src/app/authentication/authentication.component.css
+++ b/iplfe/src/app/authentication/authentication.component.css
@@ -67,3 +67,9 @@ div > button:first-child {
 form {
     padding-top: 10px;
 }
+
+.logged-in-cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
